--- a/proyecto.html
+++ b/proyecto.html
@@ -2,42 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>CALCULADORA</title>
-    <link href="https://fonts.gstatic.com" rel="stylesheet" >
-    <link href="proyecto.css" rel="stylesheet">
-   <script src="Display.js" type="text/javascript"></script>
-    <script src="Calculadora.js" type="text/javascript"></script>
-    <script src="proyecto.js" type="text/javascript" defer></script>
-</head>
-<body>
-    <div class="container">
-        <div  class="calculadora">
-            <div class="display">
-                <div id="valor-anterior"></div>
-                <div id="valor-actual"></div>
-            </div>
-            <button class="col-2" onclick="display.borrarTodo()">AC</button>
-            <button onclick="display.borrar()">&larr;</button>
-            <button class="operador" value="dividir">%</button>
-            <button class="numero">7</button>
-            <button class="numero">8</button>
-            <button class="numero">9</button>
-            <button class="operador" value="multiplicar">X</button>
-            <button class="numero">6</button>
-            <button class="numero">5</button>
-            <button class="numero">4</button>
-            <button class="operador" value="restar">-</button>
-            <button class="numero">3</button>
-            <button class="numero">2</button>
-            <button class="numero">1</button>
-            <button class="operador" value="sumar">+</button>
-            <button class="col-2 numero">0</button>
-            <button class="numero">.</button>
-            <button class="operador" value="igual">=</button>
-        </div>
-    </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CALCULADORA
+    </title>
+    <link type="text/css" href="proyecto.css" rel="stylesheet">
     
+</head>
+<body onload="init ()">
+    <table class="calculadora">
+    <tr>
+        <td colspan="4"><span id="calculador"></span></td>
+
+    </tr>
+    <tr>
+        <td> <button id="siete">7</td></td>
+        <td> <button id="ocho">8</td></td>
+        <td> <button id="nueve">9</td></td>
+        <td> <button id="division">/</td></td>        
+
+    </tr>
+    <tr>
+        <td> <button id="cuatro">4</td></td>
+        <td> <button id="cinco">5</td>></td>
+        <td> <button id="seis">6</td>></td>
+        <td> <button id="multiplicar">*</td>></td>
+    </tr>
+    <tr>
+        <td> <button id="uno">1</td></td>
+        <td> <button id="dos">2</td></td>
+        <td> <button id="tres">3</td></td>
+        <td> <button id="resta">-</td></td>
+    </tr>
+    <tr>
+        <td> <button id="cero">0</td></td>
+        <td><button id="reset">ac</button></td>
+        <td> <button id="igual">=</td></td>
+        <td> <button id="suma">+</td></td>
+    </tr>
+   
+</table>
+<script src="proyecto.js"></script>    
 </body>
 </html>
