--- a/proyecto.html
+++ b/proyecto.html
@@ -6,7 +6,8 @@
     <title>CALCULADORA
     </title>
     <link type="text/css" href="proyecto.css" rel="stylesheet">
-    
+    <h1>Andres Mauricio Gamboa Vera</h1>
+    <h1>Yunior Ovelio Gonzalez Mora</h1>
 </head>
 <body onload="init ()">
     <table class="calculadora">
@@ -14,6 +15,7 @@
         <td colspan="4"><span id="calculador"></span></td>
 
     </tr>
+
     <tr>
         <td> <button id="siete">7</td></td>
         <td> <button id="ocho">8</td></td>
@@ -35,7 +37,7 @@
     </tr>
     <tr>
         <td> <button id="cero">0</td></td>
-        <td><button id="reset">ac</button></td>
+        <td><button id="reset">Ac</button></td>
         <td> <button id="igual">=</td></td>
         <td> <button id="suma">+</td></td>
     </tr>
